--- a/intro-typescript/package.json
+++ b/intro-typescript/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-    "scripts": {
-    "start": "tsc && node ./build/",
+  "scripts": {
+    "start": "tsc && node ./build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
